--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-    <h1>AutoNest</h1>
+    <h1>Servzy</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="parts.html">Parts</a>
